refactor signature check
